--- a/Cinotam.AbpModuleZero.Web/App/SysAdmin/Main/sidebar.css
+++ b/Cinotam.AbpModuleZero.Web/App/SysAdmin/Main/sidebar.css
@@ -21,7 +21,11 @@
 #wrapper.toggled {
     padding-left: 250px;
 }
-
+.sidebar-nav li a:active, .sidebar-nav li a:focus {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
+}
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
